# glmff

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  glmff.F90
src/core/: glmff_macros.h  glmff_mat.F90  glmff_mat2x2.F90  glmff_mat2x3.F90  glmff_mat2x4.F90  glmff_mat3x2.F90  glmff_mat3x3.F90  glmff_mat3x4.F90  glmff_mat4x2.F90  glmff_mat4x3.F90  glmff_mat4x4.F90  glmff_quat.F90  glmff_scalar.F90  glmff_vec.F90  glmff_vec2.F90  glmff_vec3.F90  glmff_vec4.F90
src/core/detail/: bvec_common.inc  bvec_comparison.inc  bvec_relational.inc  fvec_common.inc  fvec_geometric.inc  fvec_reciprocal.inc  fvec_trigonometric.inc  int_common.inc  mat_arithmetic.inc  mat_clip_space.inc  mat_common.inc  mat_comparison.inc  mat_constructors.inc  mat_conversion.inc  mat_extra.inc  mat_impl.inc  mat_projection.inc  mat_square.inc  mat_transform.inc  mat_type_impl.inc  quat_arithmetic.inc  quat_common.inc  quat_comparison.inc  quat_constructors.inc  quat_conversion.inc  quat_exponential.inc  quat_geometric.inc  quat_impl.inc  quat_relational.inc  quat_trigonometric.inc  quat_type_impl.inc  real_common.inc  real_geometric.inc  real_reciprocal.inc  real_trigonometric.inc  scalar_common.inc  scalar_constants.inc  scalar_impl.inc  vec_arithmetic.inc  vec_common.inc  (+6 more)
